fix horizontal scroll

--- a/easy-bank/src/css/app.css
+++ b/easy-bank/src/css/app.css
@@ -348,6 +348,7 @@ html, body {
 
 body {
   padding: 0 20px;
+  overflow-x: hidden;
 }
 
 .wrapper {
@@ -392,6 +393,13 @@ li {
   display: flex;
 }
 
+header {
+  padding: 10px 0;
+  background-color: #fff;
+  position: relative;
+  z-index: 2;
+}
+
 .header-container {
   justify-content: space-between;
   align-items: center;
@@ -418,7 +426,7 @@ li {
   height: 450px;
 }
 .intro img {
-  width: 650px;
+  width: 600px;
 }
 
 .img-wrapper {
