--- a/easy-bank/src/sass/_base.scss
+++ b/easy-bank/src/sass/_base.scss
@@ -9,6 +9,7 @@ html, body {
 
 body {
     padding: 0 20px;
+    overflow-x: hidden;
 }
 
 .wrapper {
