--- a/easy-bank/src/sass/_header.scss
+++ b/easy-bank/src/sass/_header.scss
@@ -1,3 +1,10 @@
+header {
+    padding: 10px 0;
+    background-color: #fff;
+    position: relative;
+    z-index: 2;
+}
+
 .header-container {
     justify-content: space-between;
     align-items: center;
