--- a/easy-bank/src/sass/_hero.scss
+++ b/easy-bank/src/sass/_hero.scss
@@ -8,7 +8,7 @@
     height: 450px;
 
     img {
-        width: 650px;
+        width: 600px;
     }
 }
 
